# rasterator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: application.hpp  model.hpp  rasterator.hpp
include/math/: mat3.hpp  mat4.hpp  quat.hpp  simd_float4.hpp  simd_float8.hpp  simd_mat4x4.hpp  simd_mat4x8.hpp  simd_vec4x4.hpp  simd_vec4x8.hpp  transform.hpp  utility.hpp  vec2.hpp  vec3.hpp  vec4.hpp
sample/: CMakeLists.txt  main.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  Platform.h  application.cpp  geometry.h  main.cpp  model.cpp  rasterator.cpp
